[package]
name = "yew_bulma_components"
version = "0.1.0"
authors = ["doberan <doberan.develop@gmail.com>"]
edition = "2018"
description = "Yew bluma componets"
documentation = "https://github.com/doberan/yew-bulma-components"
homepage = "https://github.com/doberan/yew-bulma-components"
repository = "https://github.com/doberan/yew-bulma-components"
readme = "README.md"
keywords = [
  "yew-bulma-components",
  "yew",
  "bulma",
  "components",
  "WebAssembly"
]
categories = ["yew-components"]
license = "MIT"

crate-type = ["rlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
yew = "0.18.0"
yew-router = "0.15.0"
yewtil = "0.4.0"

[dependencies.web-sys]
features = ["Window"]
version = "0.3"